# aibot

./: .gitignore  README.md  test.csv
solver/: CMakeLists.txt  benchmark.csv  evaluate_solver.py  optimization-ideas.txt  solver_stats_1.csv
solver/maps/: convert_maps.py  map2.txt  map_test.txt
solver/maps/Grigr2001/: readme.txt
solver/maps/Grigr2001/txt/: map1.txt  map13.txt  map14.txt  map15.txt  map23.txt  map24.txt  map25.txt  map28.txt  map3.txt  map33.txt  map34.txt  map37.txt  map39.txt  map40.txt  map41.txt  map42.txt  map44.txt  map45.txt  map55.txt  map56.txt  map57.txt  map58.txt  map60.txt  map65.txt  map66.txt  map69.txt  map70.txt  map72.txt  map73.txt  map74.txt  map75.txt  map78.txt  map79.txt  map8.txt  map81.txt  map82.txt  map9.txt  map97.txt
solver/maps/test_txt/: map1.txt  map10.txt  map11.txt  map14.txt  map16.txt  map18.txt  map19.txt  map21.txt  map22.txt  map23.txt  map24.txt  map25.txt  map3.txt  map30.txt  map31.txt  map32.txt  map33.txt  map34.txt  map35.txt  map37.txt  map38.txt  map4.txt  map42.txt  map43.txt  map44.txt  map45.txt  map46.txt  map47.txt  map48.txt  map49.txt  map5.txt  map51.txt  map53.txt  map54.txt  map55.txt  map58.txt  map59.txt  map60.txt  map61.txt  map62.txt  (+17 more)
solver/maps/tests/XSB/: 1.xsb  10.xsb  11.xsb  14.xsb  16.xsb  18.xsb  19.xsb  21.xsb  22.xsb  23.xsb  24.xsb  25.xsb  3.xsb  30.xsb  31.xsb  32.xsb  33.xsb  34.xsb  35.xsb  37.xsb  38.xsb  4.xsb  42.xsb  43.xsb  (+33 more)
solver/solutions/: map1.txt  map10.txt  map11.txt  map14.txt  map16.txt  map18.txt  map19.txt  map2.txt  map21.txt  map22.txt  map23.txt  map24.txt  map25.txt  map3.txt  map30.txt  map31.txt  map32.txt  map33.txt  map34.txt  map35.txt  map37.txt  map38.txt  map4.txt  map42.txt  map43.txt  map44.txt  map45.txt  map46.txt  map49.txt  map5.txt  map51.txt  map53.txt  map54.txt  map55.txt  map58.txt  map59.txt  map60.txt  map61.txt  map62.txt  map63.txt  (+9 more)
solver/src/: Position.cpp  Position.hpp  SokobanSolver.cpp  SokobanSolver.hpp  State.cpp  State.hpp  debug.h  main.cpp
(+23 files in other folders)
